main.tf
# create VPC
resource "google_compute_network" "vpc" {
  name                    = "gke-vpc"
  auto_create_subnetworks = false

}

# Create Subnet
resource "google_compute_subnetwork" "subnet" {
  name          = "gke-subnet"
  region        = "us-central1"
  network       = google_compute_network.vpc.name
  ip_cidr_range = "10.0.0.0/24"
}

# # Create Service Account
# resource "google_service_account" "mysa" {
#   account_id   = "mysa"
#   display_name = "Service Account for GKE nodes"
# }


# Create GKE cluster with 2 nodes in our custom VPC/Subnet
resource "google_container_cluster" "primary" {
  name                     = "private-gke-cluster"
  location                 = "us-central1-b"
  network                  = google_compute_network.vpc.name
  subnetwork               = google_compute_subnetwork.subnet.name
  remove_default_node_pool = true                ## create the smallest possible default node pool and immediately delete it.
  # networking_mode          = "VPC_NATIVE" 
  initial_node_count       = 1
  
  private_cluster_config {
    enable_private_endpoint = true
    enable_private_nodes   = true 
    master_ipv4_cidr_block = "10.13.0.0/28"
  }
  ip_allocation_policy {
    cluster_ipv4_cidr_block  = "10.11.0.0/21"
    services_ipv4_cidr_block = "10.12.0.0/21"
  }
  master_authorized_networks_config {
    cidr_blocks {
      cidr_block   = "10.0.0.7/32"
      display_name = "net1"
    }

  }
}

# Create managed node pool
resource "google_container_node_pool" "primary_nodes" {
  name       = google_container_cluster.primary.name
  location   = "us-central1-b"
  cluster    = google_container_cluster.primary.name
  node_count = 2

  node_config {
    oauth_scopes = [
      "https://www.googleapis.com/auth/logging.write",
      "https://www.googleapis.com/auth/monitoring",
    ]

    labels = {
      env = "dev"
    }

    machine_type = "e2-medium"
    preemptible  = true
    #service_account = google_service_account.mysa.email

    metadata = {
      disable-legacy-endpoints = "true"
    }
  }
}



## Create jump host . We will allow this jump host to access GKE cluster. the ip of this jump host is already authorized to allowin the GKE cluster

#resource "google_compute_address" "my_internal_ip_addr" {
#  project      = "peerless-column-407106"
#  address_type = "INTERNAL"
#  region       = "us-central1"
#  subnetwork   = "gke-subnet"
#  name         = "my-ip"
#  address      = "10.0.0.7"
#  description  = "An internal IP address for my jump host"
#}

#resource "google_compute_instance" "default" {
#  project      = "peerless-column-407106"
#  zone         = "us-central1-b"
#  name         = "jump-host"
#  machine_type = "e2-small"

#  boot_disk {
#    initialize_params {
#     image = "debian-cloud/debian-11"
#    }
#  }
#  network_interface {
#    network    = "gke-vpc-test"
#    subnetwork = "gke-subnet" # Replace with a reference or self link to your subnet, in quotes
#    network_ip         = google_compute_address.my_internal_ip_addr.address
#    access_config {
#      // Ephemeral IP will be automatically assigned
#    }
#  }

#}


## Creare Firewall to access jump hist via iap

#resource "google_compute_firewall" "rules" {
  project = "peerless-column-407106"
  name    = "allow-ssh"
  network = "gke-vpc-test" # Replace with a reference or self link to your network, in quotes

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }
  source_ranges = ["35.235.240.0/20"]
}



# Create IAP SSH permissions for your test instance

# resource "google_project_iam_member" "project" {
#   project = "peerless-column-407106"
#   role    = "roles/iap.tunnelResourceAccessor"
#   member  = "serviceAccount:terraform-demo-aft@peerless-column-407106.iam.gserviceaccount.com"
# }


# create cloud router for nat gateway
resource "google_compute_router" "router" {
  project = "peerless-column-407106"
  name    = "nat-router"
  network = "gke-vpc-test"
  region  = "us-central1"
}

## Create Nat Gateway with module

module "cloud-nat" {
  source     = "terraform-google-modules/cloud-nat/google"
  version    = "~> 1.2"
  project_id = "peerless-column-407106"
  region     = "us-central1"
  router     = google_compute_router.router.name
  name       = "nat-config"

}


############Output############################################
output "kubernetes_cluster_host" {
  value       = google_container_cluster.primary.endpoint
  description = "GKE Cluster Host"
}

output "kubernetes_cluster_name" {
  value       = google_container_cluster.primary.name
  description = "GKE Cluster Name"
}
